--- a/src/app/pages/mensajes/mensajes.component.html
+++ b/src/app/pages/mensajes/mensajes.component.html
@@ -1,7 +1,8 @@
 <h1>
 
-    Usuario: <small>{{ wsService.getUsuario().nombre }}</small></h1>
+    Usuario: <small>{{ wsService.usuario.nombre }}</small></h1>
 
+<button class="btn btn-danger" (click)="salir()">Salir</button>
 <hr>
 
 <div class="row">
